# prgen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/prgen/: cli.py  gemini.py  git_tools.py  notes.py
src/prgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
